--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ body.dark-theme {
 
 #title {
   margin: 0;
-  size: 100%;
+  width: 50%;
 }
 
 #clock {
@@ -48,9 +48,8 @@ body.dark-theme {
 
 p,
 blockquote {
-  margin: 0, 2rem;
   margin-bottom: 3rem;
-  font-size: 2rem;
+  font-size: 2.2vw;
   font-family: 'Cormorant Garamond', serif;
   background: transparent;
 }
