--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ body {
 
 html {
   background-color: transparent;
-  border: 2px solid red;
+  /* border: 2px solid red; */
 }
 
 body {
@@ -30,7 +30,7 @@ body {
   background-position: center, right bottom;
   background-repeat: no-repeat, no-repeat;
   font-family: 'Cormorant Garamond', serif;
-  border: 2px solid orange;
+  /* border: 2px solid orange; */
 }
 
 body.dark-theme {
@@ -52,7 +52,7 @@ a {
 svg {
   fill: var(--light-text);
   width: 100%;
-  border: 1px solid red;
+  /* border: 1px solid red; */
 }
 
 .dark-theme svg {
@@ -93,7 +93,7 @@ footer {
   display: inline-flex;
   height: 2rem;
   margin: auto 1rem 1rem 1rem;
-  border: 1px solid yellowgreen;
+  /* border: 1px solid yellowgreen; */
 }
 
 footer p,
@@ -123,7 +123,7 @@ footer a {
 }
 
 .left-col {
-  border: 1px solid green;
+  /* border: 1px solid green; */
   flex-basis: 30%;
   flex-grow: 1;
   flex-shrink: 0;
@@ -131,7 +131,7 @@ footer a {
 }
 
 .right-col {
-  border: 1px solid green;
+  /* border: 1px solid green; */
   flex-basis: 60%;
   flex-grow: 1;
   flex-shrink: 1;
