--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,12 @@ body {
 }
 
 body {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
   background: var(--light-bg);
   background-size: cover, contain;
@@ -81,57 +86,133 @@ svg {
   top: 25vh;
   right: 0;
   rotate: -45deg;
+  -webkit-transform: translate(50%, -10%), rotate(-45deg);
+  -ms-transform: translate(50%, -10%), rotate(-45deg);
   transform: translate(50%, -10%), rotate(-45deg);
 }
 
 .flex-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   gap: 5%;
-  margin: 2rem 3rem;
+  margin: 3rem 4rem;
   top: 0;
   left: 0;
   /* flex-wrap: wrap-reverse; */
 }
 
 .left-col {
-  /* border: 1px solid green; */
+  -ms-flex-preferred-size: 30%;
   flex-basis: 30%;
+  -webkit-box-flex: 1;
+  -ms-flex-positive: 1;
   flex-grow: 1;
+  -ms-flex-negative: 0;
   flex-shrink: 0;
   text-align: center;
 }
 
 .right-col {
-  /* border: 1px solid green; */
+  -ms-flex-preferred-size: 60%;
   flex-basis: 60%;
+  -webkit-box-flex: 1;
+  -ms-flex-positive: 1;
   flex-grow: 1;
+  -ms-flex-negative: 1;
   flex-shrink: 1;
 }
 
-.buttons-container {
-  margin: 3rem;
-  display: flexbox;
-  align-items: center;
-  gap: 2rem;
-  text-align: center;
-  /* border: 1px solid purple; */
-}
-
 #theme-toggle {
+  height: 3rem;
   width: 3rem;
 }
 
-#generate {
-  margin-left: 1rem;
+.container {
+  position: relative;
+  top: 0;
+  left: 0;
+  margin: 3rem;
+}
+
+#generate-button {
+  position: relative;
+  top: 0;
+  left: 0;
   height: auto;
-  width: 3rem;
+  width: 5rem;
 }
 
-.flex-container {
-  display: flex;
-  flex-direction: row;
-  gap: 1rem;
+#prompt {
+  pointer-events: none;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  margin: 0 auto;
+  padding: 0;
+  width: 10rem;
+  height: 1.5rem;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  text-align: center;
+  border-radius: 30px;
+  z-index: 9;
+
+  background: -o-linear-gradient(291deg, var(--dark-text), #0037ff);
+  background: linear-gradient(159deg, rgb(73, 73, 73), rgb(14, 14, 14));
+  background-size: 400% 400%;
+
+  -webkit-animation: Breathe 1s ease infinite;
+  animation: Breathe 2s ease infinite;
+}
+
+@-webkit-keyframes Breathe {
+  0% {
+    background-position: 14% 0%
+  }
+
+  50% {
+    background-position: 87% 100%
+  }
+
+  100% {
+    background-position: 14% 0%
+  }
+}
+
+@keyframes Breathe {
+  0% {
+    background-position: 14% 0%
+  }
+
+  50% {
+    background-position: 87% 100%
+  }
+
+  100% {
+    background-position: 14% 0%
+  }
+}
+
+#prompt p {
+  color: var(--light-bg);
+  font-size: 1.1rem;
+  margin: auto;
+  padding: 0;
+}
+
+.dark-theme #prompt {
+  background-color: var(--dark-text);
+}
+
+.dark-theme #prompt p {
+  color: var(--dark-text);
 }
 
 button {
@@ -139,7 +220,6 @@ button {
   opacity: 80%;
   background-color: transparent;
   border: none;
-  border-radius: 50%;
 }
 
 button:hover {
@@ -148,16 +228,23 @@ button:hover {
 
 .btn-pop {
   cursor: pointer;
+  -webkit-transform: scale(100%);
+  -ms-transform: scale(100%);
   transform: scale(100%);
+  -webkit-transition: ease-out 0.1s;
+  -o-transition: ease-out 0.1s;
   transition: ease-out 0.1s;
 }
 
 .btn-pop:hover {
+  -webkit-transform: scale(120%);
+  -ms-transform: scale(120%);
   transform: scale(120%);
-  transform: rotate(-90deg);
 }
 
 .btn-pop:active {
+  -webkit-transform: scale(105%);
+  -ms-transform: scale(105%);
   transform: scale(105%);
 }
 
@@ -168,6 +255,8 @@ button:hover {
 }
 
 footer {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
   display: inline-flex;
   height: 2rem;
   margin: auto 1rem 1rem 2rem;
@@ -179,7 +268,11 @@ footer a {
 }
 
 .footer-right {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   right: 0;
   margin: 0 0 0 auto;
@@ -195,11 +288,8 @@ footer a {
   }
 
   .right-col {
+    -ms-flex-preferred-size: 100%;
     flex-basis: 100%;
-  }
-
-  .buttons-container {
-    margin: 4rem;
   }
 
   button {
@@ -222,6 +312,8 @@ footer a {
   #clock {
     position: absolute;
     top: 4rem;
+    -webkit-transform: translate(50%, 0%) scale(110%);
+    -ms-transform: translate(50%, 0%) scale(110%);
     transform: translate(50%, 0%) scale(110%);
   }
 
