--- a/styles.css
+++ b/styles.css
@@ -125,14 +125,62 @@ svg {
   flex-shrink: 1;
 }
 
-.container {
-  position: relative;
-  top: 0;
-  left: 0;
-  margin: 3rem;
+.flex-container {
+  margin: 3rem 0;
+  padding: 0;
+  display: flow-root;
+  align-items: center;
+  text-align: center;
 }
 
-#generate-button {
+.arrow {
+  transform: translate(0%, -45%);
+  width: 2.5rem;
+  stroke: var(--light-text);
+  /* border: 1px solid yellow; */
+}
+
+.right {
+  animation: 0.8s linear PointLeft infinite;
+}
+
+@keyframes PointLeft {
+  0% {
+    transform: translate(20%, -45%);
+  }
+
+  10% {
+    transform: translate(0%, -45%);
+  }
+
+  100% {
+    transform: translate(20%, -45%);
+  }
+}
+
+.left {
+  animation: 0.8s linear PointRight infinite;
+}
+
+@keyframes PointRight {
+  0% {
+    transform: translate(-20%, -45%);
+  }
+
+  10% {
+    transform: translate(0%, -45%);
+  }
+
+  100% {
+    transform: translate(-20%, -45%);
+  }
+}
+
+.dark-theme .arrow {
+  stroke: var(--dark-text);
+}
+
+#generate-btn {
   position: relative;
   top: 0;
   left: 0;
@@ -140,75 +188,18 @@ svg {
   width: 5rem;
 }
 
-#prompt {
-  pointer-events: none;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  margin: 0 auto;
-  padding: 0;
-  width: 10rem;
-  height: 1.5rem;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  text-align: center;
-  border-radius: 30px;
-  z-index: 9;
-
-  background: -o-linear-gradient(291deg, var(--dark-text), #0037ff);
-  background: -o-linear-gradient(291deg, rgb(73, 73, 73), rgb(14, 14, 14));
-  background: linear-gradient(159deg, rgb(73, 73, 73), rgb(14, 14, 14));
-  background-size: 400% 400%;
-
-  -webkit-animation: Breathe 12sease infinite;
-  animation: Breathe 2s ease infinite;
+#generate-img {
+  animation: Spin 18s linear infinite;
 }
 
-@-webkit-keyframes Breathe {
+@keyframes Spin {
   0% {
-    background-position: 14% 0%
-  }
-
-  50% {
-    background-position: 87% 100%
+    transform: rotate(0deg);
   }
 
   100% {
-    background-position: 14% 0%
+    transform: rotate(360deg);
   }
-}
-
-@keyframes Breathe {
-  0% {
-    background-position: 14% 0%
-  }
-
-  50% {
-    background-position: 87% 100%
-  }
-
-  100% {
-    background-position: 14% 0%
-  }
-}
-
-#prompt p {
-  color: var(--light-bg);
-  font-size: 1.1rem;
-  margin: auto;
-  padding: 0;
-}
-
-.dark-theme #prompt {
-  background-color: var(--dark-text);
-}
-
-.dark-theme #prompt p {
-  color: var(--dark-text);
 }
 
 button {
@@ -222,14 +213,6 @@ button:hover {
   opacity: 100%;
 }
 
-.btn-pop:hover {
-  transform: scale(120%);
-}
-
-.btn-pop:active {
-  transform: scale(105%);
-}
-
 .btn-pop {
   transition: ease-out 0.1s;
   cursor: pointer;
@@ -237,6 +220,14 @@ button:hover {
   width: 2rem;
   margin: 0 0.4rem;
   /* border: 1px solid green */
+}
+
+.btn-pop:hover {
+  transform: scale(120%);
+}
+
+.btn-pop:active {
+  transform: scale(105%);
 }
 
 footer {
