--- a/styles.css
+++ b/styles.css
@@ -113,6 +113,7 @@ svg {
 }
 
 .right-col {
+  margin: 0 1rem;
   display: block;
   flex-basis: 60%;
   flex-grow: 1;
@@ -128,12 +129,14 @@ svg {
 }
 
 .arrow {
-  transform: translate(0%, -45%);
   width: 2.5rem;
   stroke: var(--light-text);
 }
 
 .right {
+  position: relative;
+  top: 4px;
+  right: 10px;
   animation: 0.8s linear PointLeft infinite;
 }
 
@@ -152,20 +155,25 @@ svg {
 }
 
 .left {
+  position: relative;
+  transform-origin: top;
+  top: 8px;
+  left: 0px;
+  rotate: 180deg;
   animation: 0.8s linear PointRight infinite;
 }
 
 @keyframes PointRight {
   0% {
-    transform: translate(-20%, -45%);
-  }
-
-  10% {
     transform: translate(0%, -45%);
   }
 
-  100% {
+  10% {
     transform: translate(-20%, -45%);
+  }
+
+  100% {
+    transform: translate(0%, -45%);
   }
 }
 
@@ -266,11 +274,13 @@ footer a {
   }
 
   .right-col {
+    margin: 0;
     margin-top: 2.5rem;
     margin-bottom: 15vh;
     display: none;
     flex-basis: 100%;
     align-self: center;
+    justify-self: center;
   }
 
   .left-col {
@@ -286,7 +296,7 @@ footer a {
   p,
   blockquote {
     margin-top: 0;
-    font-size: 4.6vw;
+    font-size: 2.4vh;
   }
 
   a {
