--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,6 @@ body {
   min-height: 100%;
   height: 100%;
   width: 100%;
-  /* border: 2px solid yellow; */
 }
 
 body {
@@ -26,6 +25,9 @@ body {
   display: -flexbox;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
   background: var(--light-bg);
   background-size: cover, contain;
@@ -82,6 +84,7 @@ svg {
   position: relative;
   visibility: visible;
   max-width: 100%;
+  -ms-flex-item-align: center;
   align-self: center;
 }
 
@@ -89,12 +92,17 @@ svg {
   position: fixed;
   top: 0%;
   right: -10%;
+  -webkit-transform: scale(140%);
+  -ms-transform: scale(140%);
   transform: scale(140%);
   rotate: -45deg;
 }
 
 .flex-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   gap: 5%;
   margin: 3rem 4rem;
@@ -103,10 +111,19 @@ svg {
 }
 
 .left-col {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
+  -ms-flex-preferred-size: 30%;
   flex-basis: 30%;
+  -webkit-box-flex: 1;
+  -ms-flex-positive: 1;
   flex-grow: 1;
+  -ms-flex-negative: 0;
   flex-shrink: 0;
   text-align: center;
   max-block-size: 90vh;
@@ -115,8 +132,12 @@ svg {
 .right-col {
   margin: 0 1rem;
   display: block;
+  -ms-flex-preferred-size: 59%;
   flex-basis: 59%;
+  -webkit-box-flex: 1;
+  -ms-flex-positive: 1;
   flex-grow: 1;
+  -ms-flex-negative: 1;
   flex-shrink: 1;
 }
 
@@ -124,6 +145,8 @@ svg {
   margin: 2rem 0;
   padding: 2rem 0;
   display: flow-root;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   text-align: center;
 }
@@ -137,42 +160,86 @@ svg {
   position: relative;
   top: 4px;
   right: 10px;
+  -webkit-animation: 0.8s linear PointLeft infinite;
   animation: 0.8s linear PointLeft infinite;
 }
 
-@keyframes PointLeft {
+@-webkit-keyframes PointLeft {
   0% {
+    -webkit-transform: translate(20%, -45%);
     transform: translate(20%, -45%);
   }
 
   10% {
+    -webkit-transform: translate(0%, -45%);
     transform: translate(0%, -45%);
   }
 
   100% {
+    -webkit-transform: translate(20%, -45%);
+    transform: translate(20%, -45%);
+  }
+}
+
+@keyframes PointLeft {
+  0% {
+    -webkit-transform: translate(20%, -45%);
+    transform: translate(20%, -45%);
+  }
+
+  10% {
+    -webkit-transform: translate(0%, -45%);
+    transform: translate(0%, -45%);
+  }
+
+  100% {
+    -webkit-transform: translate(20%, -45%);
     transform: translate(20%, -45%);
   }
 }
 
 .left {
   position: relative;
+  -webkit-transform-origin: top;
+  -ms-transform-origin: top;
   transform-origin: top;
   top: 8px;
   left: 0px;
   rotate: 180deg;
+  -webkit-animation: 0.8s linear PointRight infinite;
   animation: 0.8s linear PointRight infinite;
 }
 
-@keyframes PointRight {
+@-webkit-keyframes PointRight {
   0% {
+    -webkit-transform: translate(0%, -45%);
     transform: translate(0%, -45%);
   }
 
   10% {
+    -webkit-transform: translate(-20%, -45%);
     transform: translate(-20%, -45%);
   }
 
   100% {
+    -webkit-transform: translate(0%, -45%);
+    transform: translate(0%, -45%);
+  }
+}
+
+@keyframes PointRight {
+  0% {
+    -webkit-transform: translate(0%, -45%);
+    transform: translate(0%, -45%);
+  }
+
+  10% {
+    -webkit-transform: translate(-20%, -45%);
+    transform: translate(-20%, -45%);
+  }
+
+  100% {
+    -webkit-transform: translate(0%, -45%);
     transform: translate(0%, -45%);
   }
 }
@@ -186,15 +253,30 @@ svg {
 }
 
 #generate-img {
+  -webkit-animation: Spin 18s linear infinite;
   animation: Spin 18s linear infinite;
 }
 
-@keyframes Spin {
+@-webkit-keyframes Spin {
   0% {
+    -webkit-transform: rotate(0deg);
     transform: rotate(0deg);
   }
 
   100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes Spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+
+  100% {
+    -webkit-transform: rotate(360deg);
     transform: rotate(360deg);
   }
 }
@@ -211,6 +293,8 @@ button:hover {
 }
 
 .btn-pop {
+  -webkit-transition: ease-out 0.1s;
+  -o-transition: ease-out 0.1s;
   transition: ease-out 0.1s;
   cursor: pointer;
   height: 2rem;
@@ -219,10 +303,14 @@ button:hover {
 }
 
 .btn-pop:hover {
+  -webkit-transform: scale(120%);
+  -ms-transform: scale(120%);
   transform: scale(120%);
 }
 
 .btn-pop:active {
+  -webkit-transform: scale(105%);
+  -ms-transform: scale(105%);
   transform: scale(105%);
 }
 
@@ -240,7 +328,12 @@ footer a {
 
 .header {
   position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
   flex-direction: row;
   top: 1rem;
   right: 2rem;
@@ -249,8 +342,6 @@ footer a {
 @media (orientation: portrait) {
   .header {
     margin: 1.5rem 0.2rem;
-    /* flex-direction: column-reverse; */
-    /* border: 1px solid yellow; */
   }
 
   .flex-wrapper {
@@ -259,15 +350,21 @@ footer a {
 
   .flex-container {
     position: fixed;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     bottom: 0;
     left: 50%;
+    -webkit-transform: translate(-50%, 0%);
+    -ms-transform: translate(-50%, 0%);
     transform: translate(-50%, 0%);
   }
 
   #generate-btn {
     position: relative;
     bottom: 50%;
+    -webkit-transform: translate(0%, -100%);
+    -ms-transform: translate(0%, -100%);
     transform: translate(0%, -100%);
   }
 
@@ -276,7 +373,9 @@ footer a {
     margin-top: 2.5rem;
     margin-bottom: 15vh;
     display: none;
+    -ms-flex-preferred-size: 100%;
     flex-basis: 100%;
+    -ms-flex-item-align: center;
     align-self: center;
     justify-self: center;
   }
@@ -302,7 +401,8 @@ footer a {
   }
 
   #clock {
-    /* position: absolute; */
+    -webkit-transform: translate(35%, 10%);
+    -ms-transform: translate(35%, 10%);
     transform: translate(35%, 10%);
     height: 110%;
     overflow: hidden;
