--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,7 @@ blockquote {
   margin: 1rem;
   margin-bottom: 2.4rem;
   margin-top: 3rem;
-  font-size: 2.1vw;
+  font-size: 2vw;
   background: transparent;
 }
 
@@ -151,7 +151,56 @@ svg {
   text-align: center;
 }
 
+.lds-dual-ring {
+  display: inline-block;
+  width: 90px;
+  height: 90px;
+  border-color: red;
+}
+
+.dark-theme .lds-dual-ring:after {
+  border-color: var(--dark-text)transparent var(--dark-text) transparent;
+}
+
+.lds-dual-ring:after {
+  content: " ";
+  display: inline-block;
+  width: 2rem;
+  height: 2rem;
+  margin: 8px;
+  border-radius: 50%;
+  border: 6px solid;
+  border-color: var(--light-text)transparent var(--light-text) transparent;
+  -webkit-animation: lds-dual-ring 1.6s linear infinite;
+  animation: lds-dual-ring 1.6s linear infinite;
+}
+
+@-webkit-keyframes lds-dual-ring {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes lds-dual-ring {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
 .arrow {
+  display: inline-block;
   width: 2.5rem;
   stroke: var(--light-text);
 }
@@ -249,6 +298,7 @@ svg {
 }
 
 #generate-btn {
+  display: none;
   width: 4.2rem;
 }
 
