--- a/styles.css
+++ b/styles.css
@@ -54,11 +54,11 @@ a {
 }
 
 .dark-theme a:link {
-  color: goldenrod;
+  color: rgb(221, 178, 70);
 }
 
 .dark-theme a:visited {
-  color: rgb(196, 44, 44);
+  color: rgb(206, 76, 76);
 }
 
 svg {
@@ -86,6 +86,7 @@ svg {
   max-width: 100%;
   -ms-flex-item-align: center;
   align-self: center;
+  pointer-events: none;
 }
 
 #clock {
@@ -417,13 +418,10 @@ footer a {
   }
 
   p,
-  blockquote {
+  blockquote,
+  a {
     margin-top: 0;
     font-size: 2.4vh;
-  }
-
-  a {
-    font-size: 4.4vw;
   }
 
   #clock {
