--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,6 @@ html {
 
 html,
 body {
-  margin: 0;
   padding: 0;
   min-height: 100%;
   height: 100%;
@@ -21,6 +20,7 @@ body {
 }
 
 body {
+  margin: 0;
   display: -webkit-box;
   display: -flexbox;
   display: -ms-flexbox;
@@ -42,10 +42,8 @@ body.dark-theme {
 }
 
 blockquote {
-  margin: 1rem;
-  margin-bottom: 2.4rem;
-  margin-top: 3rem;
-  font-size: 2vw;
+  margin: 4rem 4rem 4rem 0;
+  font-size:calc(14px + 1vw);
   background: transparent;
 }
 
@@ -382,14 +380,13 @@ footer a {
     display: flex;
     bottom: 0;
     left: 50%;
-    -webkit-transform: translate(-50%, 0%);
-    -ms-transform: translate(-50%, 0%);
-    transform: translate(-50%, 0%);
+    -webkit-transform: translate(-50%, -10%);
+    -ms-transform: translate(-50%, -10%);
+    transform: translate(-50%, -10%);
   }
 
   #generate-btn {
     position: relative;
-    bottom: 50%;
     -webkit-transform: translate(0%, -100%);
     -ms-transform: translate(0%, -100%);
     transform: translate(0%, -100%);
@@ -418,9 +415,13 @@ footer a {
   }
 
   p,
-  blockquote,
   a {
     margin-top: 0;
+    font-size: 2.4vh;
+  }
+
+  blockquote {
+    margin: 3rem 0;
     font-size: 2.4vh;
   }
 
